# game-vision-security-research

./: CMakeLists.txt  GHOST_PROTOCOL_V4_TEMPLATE.md  README.md
data/: dota_simulator.py  hybrid_trainer.py  requirements.txt  train_dota_ml.py
src/capture/: desktop_duplication.h
